--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:398763627338:ios:e07870dfef8fc44640a7b3",
-  "FIREBASE_PROJECT_ID": "flutter-course-staging",
-  "GCM_SENDER_ID": "398763627338"
+  "GOOGLE_APP_ID": "1:639907974997:ios:43352b8a58505b7d99a9dc",
+  "FIREBASE_PROJECT_ID": "flutter-course-production",
+  "GCM_SENDER_ID": "639907974997"
 }
