--- a/macos/firebase_app_id_file.json
+++ b/macos/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:398763627338:ios:3f5ba8591707181c40a7b3",
-  "FIREBASE_PROJECT_ID": "flutter-course-staging",
-  "GCM_SENDER_ID": "398763627338"
+  "GOOGLE_APP_ID": "1:639907974997:ios:914d74dbaea0a9dd99a9dc",
+  "FIREBASE_PROJECT_ID": "flutter-course-production",
+  "GCM_SENDER_ID": "639907974997"
 }
