--- a/.github/workflows/firebase-hosting-production.yml
+++ b/.github/workflows/firebase-hosting-production.yml
@@ -5,7 +5,7 @@ name: Deploy to Firebase Hosting on merge
 'on':
   push:
     branches:
-      - main
+      - production
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
@@ -16,7 +16,7 @@ jobs:
           flutter-version: '3.13.6'
           channel: 'stable'
       - run: flutter pub get
-      - run: flutter build web
+      - run: flutter build web --dart-define=environment=production
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
