--- a/.github/workflows/firebase-hosting-production.yml
+++ b/.github/workflows/firebase-hosting-production.yml
@@ -23,3 +23,5 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_FLUTTER_COURSE_STAGING }}'
           channelId: live
           projectId: flutter-course-staging
+        env:
+          FIREBASE_CLI_EXPERIMENTS: webframeworks
