--- a/.github/workflows/firebase-hosting-staging.yml
+++ b/.github/workflows/firebase-hosting-staging.yml
@@ -21,6 +21,7 @@ jobs:
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_FLUTTER_COURSE_STAGING }}'
-          FIREBASE_CLI_EXPERIMENTS: webframeworks
           channelId: live
           projectId: flutter-course-staging
+        env:
+          FIREBASE_CLI_EXPERIMENTS: webframeworks
