--- a/.firebaserc
+++ b/.firebaserc
@@ -1,7 +1,8 @@
 {
   "projects": {
     "default": "flutter-course-staging",
-    "production": "flutter-course-production"
+    "production": "flutter-course-production",
+    "staging": "flutter-course-staging"
   },
   "targets": {},
   "etags": {}
